# Research_Swarm

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  result.txt
app/: main.py
app/api/: auth.py  constants.py  research.py
app/core/: config.py  logging.py  research_agent.py
app/core/langgraph/: graph.py  nodes.py  state.py  tools.py
app/db/: session.py
app/models/: research.py  session.py
app/schemas/: research.py
app/services/: database.py  llm.py  stream.py  vectordb.py
app/utils/: sse.py
tests/: test_sse.py  test_streaming_service.py  test_vectordb.py
