[project]
name = "research-swarm"
version = "0.1.0"
description = "An AI agent that research about a topic"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.22.1",
    "alembic==1.18.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "authlib==1.6.6",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "cryptography==46.0.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "email-validator==2.3.0",
    "fastapi==0.123.9",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.7.0",
    "fastar==0.8.0",
    "ffmpy==1.0.0",
    "filelock==3.20.0",
    "fsspec==2025.12.0",
    "google-api-core==2.29.0",
    "google-api-python-client==2.188.0",
    "google-auth==2.48.0",
    "google-auth-httplib2==0.3.0",
    "google-cloud-aiplatform==1.134.0",
    "google-cloud-appengine-logging==1.8.0",
    "google-cloud-audit-log==0.4.0",
    "google-cloud-bigquery==3.40.0",
    "google-cloud-bigquery-storage==2.36.0",
    "google-cloud-bigtable==2.35.0",
    "google-cloud-core==2.5.0",
    "google-cloud-discoveryengine==0.13.12",
    "google-cloud-iam==2.21.0",
    "google-cloud-logging==3.13.0",
    "google-cloud-monitoring==2.29.0",
    "google-cloud-pubsub==2.34.0",
    "google-cloud-resource-manager==1.16.0",
    "google-cloud-secret-manager==2.26.0",
    "google-cloud-spanner==3.62.0",
    "google-cloud-speech==2.36.0",
    "google-cloud-storage==3.8.0",
    "google-cloud-trace==1.18.0",
    "google-crc32c==1.8.0",
    "google-genai==1.60.0",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.72.0",
    "gradio==5.23.2",
    "gradio-client==1.8.0",
    "graphviz==0.21",
    "groovy==0.1.2",
    "grpc-google-iam-v1==0.14.3",
    "grpc-interceptor==0.15.4",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub>=0.20.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "numpy==2.3.5",
    "openai==2.14.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-gcp-logging==1.11.0a0",
    "opentelemetry-exporter-gcp-monitoring==1.11.0a0",
    "opentelemetry-exporter-gcp-trace==1.11.0",
    "opentelemetry-exporter-otlp-proto-common==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-resourcedetector-gcp==1.11.0a0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "orjson==3.11.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "proto-plus==1.27.0",
    "protobuf==6.33.4",
    "pyarrow==23.0.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.17.1",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "ruff==0.14.8",
    "safehttpx==0.1.7",
    "semantic-version==2.10.0",
    "sentry-sdk==2.48.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.46",
    "sqlalchemy-spanner==1.17.2",
    "sqlparse==0.5.5",
    "sse-starlette==3.2.0",
    "starlette==0.50.0",
    "tenacity==9.1.2",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uritemplate==4.2.0",
    "urllib3==2.6.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "zipp==3.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
